Addressed comments from @jfim